# ash-voxels

./: AGENTS.md  Cargo.toml  README.md  build.rs
plans/: AGENTS.md  naive-regir.md  ray-start-optimisation.md  voxel-storage.md
shaders/: closesthit.hlsl  coarse_depth_debug.hlsl  coarse_depth_prepass.hlsl  coarse_depth_trace.hlsl  fastnoise.hlsl  intersection.hlsl  miss.hlsl  ray_query.hlsl  raygen.hlsl  shared.hlsl  terrain_gen.hlsl  voxel_hierarchy.hlsl  voxel_intersection.hlsl
src/: app.rs  assets.rs  ecs.rs  lib.rs  main.rs  scene.rs  shader_build.rs  terrain.rs  upscaling.rs  vk.rs
src/render/: mod.rs
tests/: shader_artifacts.rs
