[package]
name = "ash-voxels"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ash = "0.38"
ash-window = "0.13.0"
bevy_ecs = "0.18.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.10", features = ["bytemuck"] }
gpu-allocator = { version = "0.28.0", default-features = false, features = ["std", "vulkan"] }
png = "0.17.16"
raw-window-handle = "0.6.2"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
winit = "0.30.13"
nvngx-rs = { version = "0.3.0", optional = true }

[features]
default = []
nvngx = ["dep:nvngx-rs"]
